# proof_of_reality

./: .gitignore  CLAUDE.md  DEMO.md  DESIGN.md  PRODUCT.md  README.md  TRACK_ANSWERS.md  backend.py  main.py  oakapp.toml  package.json  ply_writer.py  pnpm-lock.yaml  pnpm-workspace.yaml  requirements.txt  signer.py  tsconfig.base.json
apps/camera-agent/: .env.example  .gitignore  LICENSE  README.md  bundle.py  main.py  oakapp.toml  poisson_worker.py  pyproject.toml  requirements.txt  signer.py
apps/camera-agent/assets/: README.md
apps/camera-agent/deploy/: install.sh
apps/camera-agent/deploy/systemd/: proof-agent.service
apps/camera-agent/firmware/armory-signer/: Makefile  README.md  go.mod  main.go
apps/camera-agent/gotee-applet/: sign_hash.rs
apps/camera-agent/scripts/: deploy.sh  forwarder.py  oak-gotee-watchdog.service  oak-gotee-watchdog.timer  oak-gotee.service  oak-host-setup.sh
apps/camera-agent/src/proof_of_reality_agent/: __init__.py  canonical.py  main.py
apps/camera-agent/src/proof_of_reality_agent/attest/: __init__.py  base.py  factory.py  mock.py  usb_armory.py
apps/camera-agent/src/proof_of_reality_agent/kiosk/: display.py
apps/camera-agent/src/proof_of_reality_agent/net/: client.py
apps/camera-agent/src/proof_of_reality_agent/pipeline/: capture.py
apps/camera-agent/src/proof_of_reality_agent/recon/: export.py
apps/camera-agent/static/: index.html
contracts/: .env.example  README.md  hardhat.config.ts  package.json  tsconfig.json
docs/: architecture.md  b2b-flow.md  b2c-flow.md  pitch.md  proof-bundle.md  setup-env.md  trust-model.md
fixtures/: README.md
gotee-applet/: README.md
scripts/: deploy-app.sh  deploy.sh  install-systemd.sh  oak-gotee-watchdog.sh  oak-gotee.service
(+199 files in other folders)
