[project]
name = "proof-of-reality-agent"
version = "0.1.0"
description = "B2B capture agent for Proof of Reality. Runs on Luxonis OAK 4 D, signs with USB Armory Mk II."
requires-python = ">=3.11"
dependencies = [
    "depthai>=3.0.0",
    "numpy>=2.0",
    "httpx>=0.27",
    "pydantic>=2.9",
    "pycryptodome>=3.21",  # for keccak
    "qrcode[pil]>=8.0",
    "open3d>=0.18",        # point cloud export
]

[project.scripts]
proof-agent = "proof_of_reality_agent.main:main"

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/proof_of_reality_agent"]
