[project]
name = "proof-of-reality-agent"
version = "0.1.0"
description = "B2B capture agent for Proof of Reality. Runs on Luxonis OAK 4 D, signs with USB Armory Mk II."
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "pycryptodome>=3.21",   # keccak (ethereum address derivation)
    "coincurve>=20.0",      # secp256k1 with recoverable signatures (mock signer)
    "qrcode[pil]>=8.0",     # nonce QR display on the kiosk
]

# DepthAI v3 + open3d are heavy and only needed on the actual camera. Install
# them with `uv sync --extra camera` when deploying to the OAK 4 D.
[project.optional-dependencies]
camera = [
    "depthai>=3.0.0",
    "numpy>=2.0",
    "open3d>=0.18",
]

[project.scripts]
proof-agent = "proof_of_reality_agent.main:main"

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/proof_of_reality_agent"]
